S05-WSO2APIManagerOnKubernetes-SingleIngressResource/api-manager/wso2apim-ingress.yaml
# Copyright (c) 2020, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wso2am-ingress
  namespace : wso2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - wso2apim
  rules:
      - host: wso2apim
        http:
          paths:
              - path: /devportal(/|$)(.*)
                backend:
                  serviceName: wso2apim
                  servicePort: 9443
              - path: /publisher(/|$)(.*)
                backend:
                  serviceName: wso2apim
                  servicePort: 9443
              - path: /oauth2(/|$)(.*)
                backend:
                  serviceName: wso2apim
                  servicePort: 9443
              - path: /authenticationendpoint(/|$)(.*)
                backend:
                  serviceName: wso2apim
                  servicePort: 9443
              - path: /logincontext(/|$)(.*)
                backend:
                  serviceName: wso2apim
                  servicePort: 9443
              - path: /commonauth(/|$)(.*)
                backend:
                  serviceName: wso2apim
                  servicePort: 9443
              - path: /oidc/checksession(/|$)(.*)  
                backend:
                  serviceName: wso2apim
                  servicePort: 9443
              - path: /oidc/logout(/|$)(.*)
                backend:
                  serviceName: wso2apim
                  servicePort: 9443
              - path: /api/am(/|$)(.*)
                backend:
                  serviceName: wso2apim
                  servicePort: 9443
              - path: /
                backend:
                  serviceName: wso2apim
                  servicePort: 8243
